--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Sutharsan G",
   "license": "MIT",
   "dependencies": {
-    "parquetjs-lite": "^0.8.7"
+    "parquetjs-lite": "^0.8.7",
+    "@types/node": "^22.15.27"
   }
 }
