--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "author": "Sutharsan G",
   "license": "MIT",
   "dependencies": {
-    "parquetjs-lite": "^0.8.7",
+    "parquetjs-lite": "^0.8.7"
+  },
+  "devDependencies": {
     "@types/node": "^22.15.27"
   }
 }
